src/App.css
body {
  background-color: #ddd;
}

.App {
  text-align: center;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 10vmin;
}

.App-header {
  background-color: #16161d;
  min-height: 10vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.wrapper {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 10px;
  padding: 15px;
  font-size: 14px;
}

/* tablets and desktop */
@media only screen and (min-width: 768px) {
    .wrapper {
      grid-template-columns: 1fr 1fr 1fr;
    }
}

/* phones */
@media only screen and (max-width: 767px) {
    .wrapper {
      grid-template-columns: 1fr 1fr;
    }
}

/* portrait phones */
@media only screen and (max-width: 767px) and (orientation: portrait) {
    .wrapper {
      grid-template-columns: 1fr;
    }
}

.paper {
  padding: 20px;
}

.title {
  font-size: 24px;
  text-align: center;
}

 /* className='clipboarder' */
.clipboarder:hover {
  cursor: pointer;
}
.toast-info {
  opacity: 1 !important;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

